# examples

./: README.md
python/basics/: readme.md
python/bots/: readme.md
rust/basics/: DLOBfetcher.rs  limit_order.rs  readme.md  readme.mdx
rust/bots/: readme.md
rust/bots/ema-crossover-strategy/: Cargo.toml  README.md
rust/bots/ema-crossover-strategy/src/: main.rs  prices.rs  signal.rs  trading.rs
rust/bots/oracle-limit-maker/: .env.example  Cargo.toml  README.md  rust-toolchain.toml
rust/bots/oracle-limit-maker/src/: main.rs  maker.rs
rust/bots/simple-oracle-limit-maker/: .env.example  Cargo.toml  README.md
rust/bots/simple-oracle-limit-maker/src/: main.rs  maker.rs
typescript/basics/: readme.md
typescript/bots/: readme.md
typescript/bots/simple-oracle-limit-maker/: .gitignore  .prettierrc  README.md  package.json
typescript/bots/simple-oracle-limit-maker/src/: config.ts  index.ts  maker.ts  utils.ts
