[package]
name = "oracle-limit-maker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
drift-rs = { git = "https://github.com/drift-labs/drift-rs", tag = "v1.0.0-alpha.16", features=['unsafe_pub'] }
solana-sdk = "2.3.1"
dotenv = "0.15.0"
log = "0.4.27"
env_logger = "0.11.8"
